test/functions/diten/refIntentWithNonLvalue.good
refIntentWithNonLvalue.chpl:5: error: non-lvalue actual is passed to 'ref' formal 'x' of f()
